feat: use singleton for EntityManagerFactory